css/samples.css
.g-samples {
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.g-sample {
    display: flex;
    flex-wrap: wrap;
    gap: 50px;

    /* padding: 20px;
    background-color: #1c1d20;
    border: 1px solid rgba(255, 255, 255, 0.1);
    border-radius: 20px; */
}

.g-sample .sample-sec {
    display: flex;
    flex-direction: column;
    gap: 20px;

    flex-grow: 1;
    width: 40%;
    min-width: 330px;
}

.g-sample .sample-name {
    font-size: 1.6rem;
    margin: 0px;

    border-bottom: 3px solid gray;
    padding-bottom: 5px;
}

.g-sample .sample-desc {
    line-height: 1.1rem;
}

.g-sample .sample-tech {
    display: flex;
    gap: 10px;
}

.g-sample .sample-tech div {
    padding: 10px;
    background-color: #2e4051;
    border-radius: 10px;
    transition: background-color 0.3s ease;

    &:hover {
        background-color: #3e63d0;
    }
}

.g-sample img {
    border-radius: 10px;
    border: 3px solid gray;
    width: 100%;
    
    transition: box-shadow 0.3s ease;
}

.g-sample img:hover {
    box-shadow: 0 0 8px #9ecaed;
}

#p-web-samples .g-title h2,
#p-other-samples .g-title h2 {
    border-bottom: 5px solid #3e63d0;
    padding-bottom: 10px;
}

